[package]
name = "whoareyou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
serde = { version = "1.0.189", features = ["derive"] }
actix-web = "4.4.0"
actix-files = "0.6.2"
image = "0.24.7"